compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__type_alias__both_errors_are_shown.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "\ntype X =\n  List<Intt>\n\nfn example(a: X) {\n  todo\n}\n"
---
----- SOURCE CODE

type X =
  List<Intt>

fn example(a: X) {
  todo
}


----- ERROR
error: Unknown type
  ┌─ /src/one/two.rakun:3:8
  │
3 │   List<Intt>
  │        ^^^^ Did you mean `Int`?

The type `Intt` is not defined or imported in this module.

error: Unknown type
  ┌─ /src/one/two.rakun:5:15
  │
5 │ fn example(a: X) {
  │               ^

The type `X` is not defined or imported in this module.
