compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__type_alias__type_alias_error_does_not_stop_analysis.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
assertion_line: 101
expression: "\ntype UnusedParameter<a> =\n  Int\n\ntype UnknownType =\n  Dunno\n"
---
error: Unused type parameter
  ┌─ /src/one/two.rakun:2:1
  │  
2 │ ╭ type UnusedParameter<a> =
3 │ │   Int
  │ ╰─────^

The type variable `a` is unused. It can be safely removed.

error: Unknown type
  ┌─ /src/one/two.rakun:6:3
  │
6 │   Dunno
  │   ^^^^^

The type `Dunno` is not defined or imported in this module.
